# coinlist_helper

./: .env  README.md  apit.py  config.py  pyproject.toml  runner.py
app/: __init__.py  app_utils.py  models.py
app/api/: user_api.py
app/db/: providers.py  tables.py
app/forms/: authorization.py  edit_data.py
app/main/: manager.py
app/routes/: auth.py  main.py  main_route.py  route_utils.py  utils.py
app/static/css/: authorization.css  general.css  main.css  profile.css
app/static/js/: checkbox-selection.js  edit-profile.js  editrow-toggler.js  main-requests.js  profiletoggler.js
app/templates/: authorization.html  base.html  main.html  profile.html  table.html
migrations/versions/: 40b6f0fb6edd_initial_migration.py  9d8c214a21df_initial_migration.py  ab3eb8e57fcd_initial_migration.py  e2e240b6fe60_inirial_migration.py
